--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dj-events-frontend",
-  "version": "0.1.0",
+  "name": "exponent",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
